# bgfx-playground

./: .gitignore  .gitmodules  CMakeLists.txt  build_bgfx.bat  process_user_shaders_dx11.bat  process_user_shaders_dx11_internal.bat
libs/: bgfx-shared-libDebug.lib
libs/bgfx/: bgfx-shared-libDebug.exp  bgfx-shared-libRelease.exp  bgfx-shared-libRelease.lib
shaders/: varying.def.sc
shaders/fragment/: fs_draw_fullscreen_quad.sc  fs_sponza.sc  fs_triangle.sc
shaders/vertex/: vs_draw_fullcreen_quad.sc  vs_draw_fullscreen_quad.sc  vs_shadowmap_gen.sc  vs_sponza.sc  vs_triangle.sc
src/: application.cpp  application.h  bgfx_helpers.cpp  bgfx_helpers.h  entity.cpp  entity.h  globals.cpp  globals.h  io_helpers.cpp  io_helpers.h  main.cpp  memory_helpers.cpp  memory_helpers.h  struct_helpers.cpp  struct_helpers.h  utils.hpp
src/Windows/: Window.cpp  Window.h
src/class_features/: class_features.hpp
src/gfx/: bgfx_helpers.cpp  bgfx_helpers.h  gfx_def.h  gfx_instancing.h  gfx_objects.cpp  gfx_objects.h  gfx_pass.cpp  gfx_pass.h  gfx_renderer.cpp  gfx_renderer.h  gfx_resourcemap.cpp  gfx_resourcemap.h  gfx_settings.cpp  gfx_settings.h  gfx_vertex.h
src/gfx/pass/: gfx_pass_debugview.cpp  gfx_pass_debugview.h  gfx_pass_forward.cpp  gfx_pass_forward.h  gfx_pass_schedule.h  gfx_pass_shadow.cpp  gfx_pass_shadow.h  gfx_passbase.cpp  gfx_passbase.h
src/input/: input_system.cpp  input_system.h  input_system.hpp  keyboard.cpp  keyboard.h
src/io/: io_helpers.cpp  io_helpers.h
src/main/: application.cpp  application.h  main.cpp
src/math/: math_helpers.hpp  transformable.cpp  transformable.h  view_provider.cpp  view_provider.h
src/scene/: camera.cpp  camera.h  component_light.cpp  component_light.h  component_renderable.h  entity.cpp  entity.h  graphics_component.h  renderable_component.h  scene.cpp  scene.h  scene_importer.cpp  scene_importer.h  transformable.h
src/system/: window.cpp  window.h
